k8s/v1.37.0/clusters/nuc-k8s/istio-ingress/kubernetes-objects/gateway-https.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-https
  namespace: istio-ingress
spec:
  selector:
    istio: ingress-nuc-k8s
  servers:
    - port:
        number: 8443
        name: https
        protocol: HTTPS
      hosts:
        - "*.maifuj.com"
      tls:
        mode: SIMPLE
        credentialName: wildcard-certificate-secret
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*.maifuj.com"
      tls:
        httpsRedirect: true   # 301 to https, no VirtualService needed
