k8s/v1.37.0/clusters/nuc-k8s/istio-ingress/kubernetes-objects/vault-gateway-tls-passthrough.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: vault-gateway-tls-passthrough
  namespace: istio-ingress
spec:
  selector:
    istio: ingress--nuc-k8s
  servers:
    - port:
        number: 443
        name: vvault-tls-passthrough
        protocol: TLS
      hosts:
        - vault.maifuj.com
      tls:
        mode: PASSTHROUGH
